# aiflect

./: .gitattributes  .gitignore  AGENTS.md  TEST.md
python/: pyproject.toml
python/tests/: conftest.py
python/tests/costly/: test_text_embedding.py  test_text_generation.py
python/tests/unit/: test_anthropic_client.py  test_anthropic_generation_mapper.py  test_anthropic_stream_mapper.py  test_capabilities.py  test_client_config.py  test_deepseek_client.py  test_deepseek_generation_mapper.py  test_deepseek_stream_mapper.py  test_embeddings.py  test_generation.py  test_items.py  test_media.py  test_openai_client.py  test_openai_embeddings.py  test_openai_generation_mapper.py  test_openai_stream_mapper.py  test_pydantic_structured_output.py  test_resources.py  test_tools.py  test_volcengine_client.py  test_volcengine_embeddings.py  test_volcengine_files.py  test_volcengine_generation_mapper.py  test_volcengine_stream_mapper.py
python/whero/aiflect/: __init__.py  structured.py
python/whero/aiflect/core/: __init__.py  capabilities.py  client.py  embeddings.py  errors.py  generation.py  items.py  media.py  resources.py
python/whero/aiflect/providers/anthropic/: __init__.py  capabilities.py  client.py  mapper.py  stream.py
python/whero/aiflect/providers/deepseek/: __init__.py  capabilities.py  client.py  mapper.py  stream.py
python/whero/aiflect/providers/openai/: __init__.py  capabilities.py  client.py  mapper.py  media.py  (+1 more)
python/whero/vatbrain/: __init__.py
python/whero/vatbrain/core/: __init__.py  capabilities.py  generation.py  items.py  media.py
(+107 files in other folders)
