[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "whero-vatbrain"
version = "0.1.0"
description = "Provider-neutral LLM inference abstraction layer."
requires-python = ">=3.12"
dependencies = [
    "openai>=2.34.0,<3",
]

[project.optional-dependencies]
pydantic = [
    "pydantic>=2,<3",
]
anthropic = [
    "anthropic>=0.105.2,<1",
]
deepseek = [
    "anthropic>=0.105.2,<1",
]
volcengine = [
    "volcengine-python-sdk[ark]>=5.0.30,<6",
]
test = [
    "pydantic>=2,<3",
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["whero"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "costly: tests that may call real provider APIs or create billable usage",
    "provider(name): provider targeted by a costly test",
    "feature(name): provider feature family targeted by a costly test",
]
